fixed white space on mobile add yourself section

--- a/homepage.css
+++ b/homepage.css
@@ -182,7 +182,7 @@ noscript a:hover {
 
 @media screen and (max-width: 530px) {
     #add-yourself iframe {
-        height: 870px;
+        height: 740px;
     }
 }
 
